Bug 279018 - Sun shadow incorrect for some themes
Summary: Sun shadow incorrect for some themes
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-01 11:00 UTC by Bernhard Beschow
Modified: 2011-08-01 13:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-08-01 11:00:22 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

The sun shading assumes a base tile layout of 1x2 tiles. As a result, the sun shading is incorrect for themes such as OSM.

Reproducible: Always

Steps to Reproduce:
Activate View->Sun Contol->Sun Shading->Shadow.

Actual Results:  
Shadow and sun regions don't follow the form of a wave because they are too wide.

Expected Results:  
Shadow and sun regions should follow the form of a "wave".
Comment 1 Bernhard Beschow 2011-08-01 12:25:25 UTC
Git commit 9744ed0a14f203ba5ad7badeae1d02528aea8117 by Bernhard Beschow.
Committed on 29/07/2011 at 17:22.
Pushed by beschow into branch 'kde-4.7'.

fix sun shading to use correct number of base tiles

BUG: 279018

M  +5    -0    src/lib/MergedLayerDecorator.h
M  +6    -1    src/lib/StackedTileLoader.cpp
M  +11   -6    src/lib/MergedLayerDecorator.cpp

http://commits.kde.org/marble/9744ed0a14f203ba5ad7badeae1d02528aea8117
Comment 2 Bernhard Beschow 2011-08-01 13:16:32 UTC
Git commit 2abd29ecf60782c64da4bc733536975da0c03979 by Bernhard Beschow.
Committed on 29/07/2011 at 17:22.
Pushed by beschow into branch 'master'.

fix sun shading to use correct number of base tiles

BUG: 279018

(cherry picked from commit 9744ed0a14f203ba5ad7badeae1d02528aea8117)

M  +4    -0    src/lib/MergedLayerDecorator.h
M  +5    -1    src/lib/StackedTileLoader.cpp
M  +14   -14   src/lib/MergedLayerDecorator.cpp

http://commits.kde.org/marble/2abd29ecf60782c64da4bc733536975da0c03979