fix sun shading to use correct number of base tiles

BUG: 279018

(cherry picked from commit 9744ed0a14f203ba5ad7badeae1d02528aea8117)