src/lib/StackedTileLoader.cpp
@@ -89,7 +89,11 @@ void StackedTileLoader::setTextureLayers( QVector<GeoSceneTexture const *> & tex
 
     d->m_textureLayers = textureLayers;
 
-    d->m_layerDecorator.setThemeId( "maps/" + d->m_textureLayers.at( 0 )->sourceDir() );
+    if ( !d->m_textureLayers.isEmpty() ) {
+        const GeoSceneTexture *const firstTexture = d->m_textureLayers.at( 0 );
+        d->m_layerDecorator.setLevelZeroLayout( firstTexture->levelZeroColumns(), firstTexture->levelZeroRows() );
+        d->m_layerDecorator.setThemeId( "maps/" + d->m_textureLayers.at( 0 )->sourceDir() );
+    }
 
     clear();
 
